--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   provider: ^6.0.1
   country_code_picker: ^2.0.2
   url_launcher: ^6.0.12
+  logger: ^0.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
